# context_compiler

./: .gitignore  README.md  SKILL.md  pyproject.toml
docs/: DEVELOPMENT.md
docs/plans/: 2025-10-26-vault-tools-implementation.md
src/context_compiler/: __init__.py  brief.py  compiler.py  models.py  ranking.py  relevance.py  skill.py  tools.py
tests/: test_brief.py  test_integration.py  test_ranking.py  test_relevance.py  test_tools.py
tests/fixtures/test_vault/people/: Sarah.md
tests/fixtures/test_vault/projects/: Project Phoenix.md
